<resources>
        <string name="app_name">TTT Cinemas</string>
    <string name="select">Giới Tính</string>
    <string name="title">Vé của tôi</string>
    <string name="tl_img">CGV Vĩnh Trung Plaza</string>
    <string name="tenphim">Gia đình x điệp viên: Mã trắng</string>
    <string name="ma_ghe">Ghế A01,A02</string>
    <string name="name_ngay">Ngày</string>
    <string name="suatchieu">Suất chiếu:16/09/2024</string>
    <string name="val_ngay">16/09/2024</string>
    <string name="xemchitiet">Xem chi tiết</string>
    <string name="name_gio">Giờ</string>
    <string name="val_gio">19:00Pm</string>
    <string name="name_rap">Rạp</string>
    <string name="val_rap">Cinema</string>
    <string name="diachi">225-227 Đường Hùng Vương Quận Thanh Khê TP Đà Nẵng</string>
    <string name="QR">Đưa mã QR cho kiểm soát vé</string>
    <string name="name_tongtien">Tổng tiền thanh toán</string>
    <string name="gia_tien">130.000vnđ</string>
    <string name="image_description">Description of the image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="google_button_description">Đăng nhập bằng Google</string>
    <string name="twitter_button_description">Đăng nhập bằng Twitter</string>
    <string name="phim_hoat_hinh">Phim hoạt hình</string>
    <string name="phim_hoat_hinh_desc">Section for animated movies</string>
    <string name="back_icon_desc">Back icon</string>
    <string name="select_tinh">Chọn Tỉnh</string>
    <string name="img_phim2">https://i.imgur.com/SSCivLb.jpeg</string>
    <string name="phd2">https://i.imgur.com/HPdmwWF.jpeg</string>
    <string name="phd3">https://i.imgur.com/bXdiC0B.jpeg</string>
    <string name="phd4">https://i.imgur.com/m9edomF.jpeg</string>
    <string name="phd5">https://i.imgur.com/m9edomF.jpeg</string>

    <string name="payment_title">Thanh toán vé xem phim</string>
    <string name="receive_ticket_info">Thông tin nhận vé</string>
    <string name="receive_ticket_info_description">Chúng tôi sẽ gửi thông tin về số điện thoại và email</string>
    <string name="name_label">Họ và Tên</string>
    <string name="phone_label">Số điện thoại</string>
    <string name="email_label">Email</string>
    <string name="payment_info_label">Thông tin thanh toán</string>
    <string name="promotion_label">Khuyến mãi</string>
    <string name="total_amount_label">Thành tiền</string>
    <string name="discount_label">Giảm giá</string>
    <string name="total_label">Tổng tiền</string>
    <string name="payment_method_label">Chọn phương thức thanh toán</string>
    <string name="select_voucher">Chọn Voucher</string>
    <string name="select_voucher_hint">Chọn Voucher</string>
    <string name="enter_name">Nhập họ và tên</string>
    <string name="enter_phone">Nhập số điện thoại</string>
    <string name="enter_email">Nhập email</string>
    <string name="payment_button">Thanh Toán</string>
    <string name="giave">Giá vé</string>
    <string name="doan">Đồ ăn</string>


    <string-array name="city_list">
        <item>Hà Nội</item>
        <item>Đà Nẵng</item>
        <item>Hồ Chí Minh</item>
        <item>Hải Phòng</item>
        <item>Cần Thơ</item>
        <item>Sài Gòn</item>
        <item>Quảng Trị</item>
        <item>HUẾ</item>
        <item>Nha Trang</item>
        <item>Hà Tĩnh</item>
    </string-array>



</resources>