<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".ThanhToan">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="0dp"
        android:layout_marginStart="0dp"
        android:background="#3F4285"
        android:layout_height="wrap_content">

        <ImageView

            android:layout_width="39dp"
            android:layout_height="match_parent"
            android:id="@+id/back"
            android:src="@drawable/baseline_arrow_back_24"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_title"
            android:textColor="@color/white"
            android:textSize="27sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/receive_ticket_info"
            android:textSize="25sp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receive_ticket_info_description"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/name_label"
            android:textColor="@color/white"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:paddingStart="10dp"
            android:textColor="@color/white"
            android:background="@drawable/button"
            android:textColorHint="@color/white"
            android:hint="@string/enter_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/phone_label"
            android:textColor="@color/white"
            android:textSize="25sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/button"
            android:contentDescription="Phone number input "
            android:layout_marginTop="5dp"
            android:paddingStart="10dp"
            android:textColor="@color/white"
            android:id="@+id/txt_phone"
            android:textColorHint="@color/white"
            android:hint="@string/enter_phone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/email_label"
            android:textColor="@color/white"
            android:textSize="25sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:id="@+id/txt_email"
            android:paddingStart="10dp"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/enter_email"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_info_label"
            android:layout_marginTop="5dp"
            android:textSize="25sp"
            android:textColor="@color/white"/>

        <TableLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/promotion_label"
                    android:textSize="25sp"
                    android:textColor="@color/white"/>
                <EditText
                    android:id="@+id/select_voucher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/select_voucher"
                    android:textColor="@color/yellow"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </TableRow>
            <TableRow>

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/giave"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:id="@+id/txt_giave"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/doan"
                    android:textColor="@color/white"
                    android:textSize="25sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"

                    android:id="@+id/txtdoan"
                    android:textSize="20sp"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/discount_label"
                    android:textColor="@color/white"
                    android:textSize="25sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:id="@+id/txt_giamgia"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_label"
                    android:textColor="@color/white"
                    android:textSize="25sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"

                    android:id="@+id/txt_tongtien"
                    android:textSize="20sp"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_method_label"
                    android:textColor="@color/yellow"
                    android:layout_weight="2"
                    android:id="@+id/select_pttt"
                    android:textStyle="bold"
                    android:textSize="25sp"/>
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/button_ThanhToan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="2"
                    android:background="@color/blue"
                    android:text="@string/payment_button"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</FrameLayout>
